# screenshot-grabber

./: README  configure.ac
src/: Makefile.am  screenshot-grabber.c
